cleaning endpoints
