# src/main/model/score.js
@@ -1,6 +1,12 @@
 exports.Score = class Score {
     constructor(arg) {
         if (arg instanceof Map) {
+            if (arg.has('travelID')) {
+                this.travelID = arg.get('travelID');
+            }
+            if (arg.has('rol')) {
+                this.rol = arg.get('rol');
+            }
             if (arg.has('points')) {
                 this.points = arg.get('points');
             }
@@ -8,9 +14,10 @@ exports.Score = class Score {
                 this.description = arg.get('description');
             }
         } else {
-            var object = JSON.parse(arg);
-            this.points = object.points;
-            this.description = object.description;
+            this.travelID = arg.travelID;
+            this.rol = arg.rol;
+            this.points = arg.points;
+            this.description = arg.description;
         }
     }
 }
