# swagger.yaml
@@ -13,17 +13,32 @@ consumes:
 produces:
   - application/json
 paths:
-  /driver:
+  /drivers:
     get:
       tags:
-        - Driver
+        - Party
       x-swagger-router-controller: partyResource
       parameters: []
       responses:
         '200':
           description: Definition generated from Swagger Inspector
           schema:
-            $ref: '#/definitions/Drivers'
+            type: array
+            items:
+              $ref: '#/definitions/DriverDTO'
+  /users:
+    get:
+      tags:
+        - Party
+      x-swagger-router-controller: partyResource
+      parameters: []
+      responses:
+        '200':
+          description: Definition generated from Swagger Inspector
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/UserDTO'
   /travel/cotization:
     post:
       tags:
@@ -148,16 +163,22 @@ paths:
 definitions:
   DriverDTO:
     properties:
+      id:
+        type: integer
       firstName:
         type: string
       lastName:
         type: string
       license:
         type: string
-  Drivers:
-    type: array
-    items:
-      $ref: '#/definitions/DriverDTO'
+  UserDTO:
+    properties:
+      id:
+        type: integer
+      firstName:
+        type: string
+      lastName:
+        type: string
   DriverSearchDTO:
     properties:
       userId:
@@ -174,12 +195,6 @@ definitions:
         type: integer
       hasACompanion:
         type: boolean
-  TravelDTO:
-    properties:
-      initialPosition: 
-        $ref: '#/definitions/GeographicCoordenateDTO'
-      finalPosition: 
-        $ref: '#/definitions/GeographicCoordenateDTO'
   TravelCotizationDTO:
     properties:
       travelID:
@@ -194,6 +209,10 @@ definitions:
         type: string
   ScoreDTO:
     properties:
+      travelID:
+        type: integer
+      rol:
+        type: string
       points:
         type: integer
       description:
